--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -80,23 +80,24 @@ $(document).ready(function() {
 					</div>
 				</a>
 			</div> <!-- widget .// -->
+			
 			<div class="widget-header dropdown">
 				<a href="#" class="ml-3 icontext" data-toggle="dropdown" data-offset="20,10">
 					<div class="icon-wrap icon-xs bg2 round text-secondary"><i class="fa fa-user"></i></div>
 					<div class="text-wrap">
 						<small>Hello.</small>
-						<span>Login <i class="fa fa-caret-down"></i></span>
+						<span><%- user.name %> <i class="fa fa-caret-down"></i></span>
 					</div>
 				</a>
 				<div class="dropdown-menu dropdown-menu-right">
-					<form class="px-4 py-3">
+					<form class="px-4 py-3" action="/login" method="POST">
 						<div class="form-group">
 						  <label>Email address</label>
-						  <input type="email" class="form-control" placeholder="email@example.com">
+						  <input type="email" name="email" class="form-control" placeholder="email@example.com">
 						</div>
 						<div class="form-group">
 						  <label>Password</label>
-						  <input type="password" class="form-control" placeholder="Password">
+						  <input type="password" name="passwd" class="form-control" placeholder="Password">
 						</div>
 						<button type="submit" class="btn btn-primary">Sign in</button>
 						</form>
